[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/speechSelf.gd" type="Script" id=1]
[ext_resource path="res://scenes/customLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/graphics/ui/bubble-self.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/tres/LunchMenu.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/graphics/ui/indicator.png" type="Texture" id=5]
[ext_resource path="res://shaders/outline.shader" type="Shader" id=6]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 6 )
shader_param/outline = true
shader_param/width = 1.0
shader_param/outline_color = Color( 0.0588235, 0.0823529, 0.0901961, 1 )

[sub_resource type="Animation" id=2]
resource_name = "float"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("indicator:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 346, 26 ), Vector2( 346, 30 ) ]
}

[node name="speechSelf" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="speechBubble" type="NinePatchRect" parent="."]
modulate = Color( 0.937255, 1, 0.913725, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -96.0
margin_right = 173.0
margin_bottom = -51.0
texture = ExtResource( 3 )
patch_margin_left = 22
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="indicator" type="TextureRect" parent="speechBubble"]
visible = false
material = SubResource( 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -25.0
margin_top = -19.0
margin_right = -10.0
margin_bottom = -11.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="indicatorAnim" type="AnimationPlayer" parent="speechBubble"]
autoplay = "float"
anims/float = SubResource( 2 )

[node name="dialogue" parent="." instance=ExtResource( 2 )]
margin_left = 36.0
margin_top = 655.0
margin_right = 429.0
margin_bottom = 683.0
rect_clip_content = false
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.0588235, 0.0823529, 0.0901961, 1 )
bbcode_enabled = true
text = "I think that's my wallet in there!"
[connection signal="character_displayed" from="dialogue" to="." method="_on_dialogue_character_displayed"]
[connection signal="fully_displayed" from="dialogue" to="." method="_on_dialogue_fully_displayed"]
